--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
+.DS_Store
+.svn
+log/*.log
+tmp/**
+node_modules/
+.sass-cache
